Update for cabane libre

--- a/public/less/style.less
+++ b/public/less/style.less
@@ -10,6 +10,11 @@
 @status-dnd: #f44336;
 @status-offline: #555;
 
+#shoutbox-main {
+  background-color:#f6f9fd;
+  -webkit-border-radius:7px;
+  border-radius:7px;
+}
 .shoutbox-opacity-transition {
   opacity: 0;
   transition: opacity 0.3s, visibility 0s linear 0.3s;
