--- a/public/less/style.less
+++ b/public/less/style.less
@@ -144,11 +144,11 @@
 
 .shoutbox {
   & .panel-heading .btn-group {
-    display: block;
+    
   }
 
   & .panel-title {
-    display: inline-block;
+    
   }
 
   &-content, &-archive-content {
@@ -164,6 +164,14 @@
 
   & .shoutbox-message-buttons {
     margin-top: 5px;
+  }
+
+  & .shoutbox-message-send-btn {
+    margin: 2px 0;
+    width: auto;
+    vertical-align: middle;
+    border: 1px solid #999999;
+    font-size: 11px;
   }
 
   &-archive-content {
