--- a/public/less/style.less
+++ b/public/less/style.less
@@ -10,7 +10,7 @@
 @status-dnd: #f44336;
 @status-offline: #555;
 
-#shoutbox-main {
+.panel-default {
   background-color:#f6f9fd;
   -webkit-border-radius:7px;
   border-radius:7px;
@@ -144,11 +144,11 @@
 
 .shoutbox {
   & .panel-heading .btn-group {
-    
+    display: block;
   }
 
   & .panel-title {
-    
+    display: inline-block;
   }
 
   &-content, &-archive-content {
