--- a/public/less/style.less
+++ b/public/less/style.less
@@ -14,6 +14,7 @@
   background-color:#f6f9fd;
   -webkit-border-radius:7px;
   border-radius:7px;
+  border:none;
 }
 .shoutbox-opacity-transition {
   opacity: 0;
@@ -143,6 +144,7 @@
 .shoutbox {
   & .panel-heading .btn-group {
     display: block;
+    background-color:none;
   }
 
   & .panel-title {
