--- a/public/less/style.less
+++ b/public/less/style.less
@@ -156,6 +156,7 @@
     overflow-y: scroll;
     padding-top: 0;
     position: relative;
+    border-radius: 7px;
 
     & p {
       margin: 0;
@@ -174,8 +175,6 @@
     font-size: 11px;
     padding: 11px;
     margin-top: 0px;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
     border: 1px solid #f6f9fd;
     border-radius: 7px;
     color: #000;
