Fix CSS & Panel TPL

--- a/public/less/style.less
+++ b/public/less/style.less
@@ -11,9 +11,11 @@
 @status-offline: #555;
 
 .panel-default {
+/*
   -webkit-border-radius:7px;
   border-radius:7px;
   border:none;
+*/
 }
 .shoutbox-opacity-transition {
   opacity: 0;
