Fix min height panel-default

--- a/public/less/style.less
+++ b/public/less/style.less
@@ -11,11 +11,10 @@
 @status-offline: #555;
 
 .panel-default {
-/*
   -webkit-border-radius:7px;
   border-radius:7px;
   border:none;
-*/
+  min-height: 40px;
 }
 .shoutbox-opacity-transition {
   opacity: 0;
