--- a/public/less/style.less
+++ b/public/less/style.less
@@ -14,7 +14,7 @@
   -webkit-border-radius:7px;
   border-radius:7px;
   border:none;
-  min-height: 40px;
+  min-height: 36px;
 }
 .shoutbox-opacity-transition {
   opacity: 0;
@@ -143,8 +143,10 @@
 
 .shoutbox {
   & .panel-heading .btn-group {
-    display: block;
+    /* display: block; */
     background-color:none;
+    padding: 0;
+    border-bottom: none
   }
 
   & .panel-title {
