--- a/public/less/style.less
+++ b/public/less/style.less
@@ -143,15 +143,19 @@
 
 .shoutbox {
   & .panel-heading .btn-group {
-    /* display: block; */
+    /* 
+    display: block;
     background-color:none;
-    padding: 0;
-    border-bottom: none
+    */
+    padding: 0px;
+    border-bottom: none;
   }
 
   & .panel-title {
+    /*
     display: inline-block;
     background-color: none;
+    */
   }
 
   &-content, &-archive-content {
