Fix CSS & Translation

--- a/public/less/style.less
+++ b/public/less/style.less
@@ -10,6 +10,11 @@
 @status-dnd: #f44336;
 @status-offline: #555;
 
+.well {
+    background-color: #fff;
+    border: 1px solid #f6f9fd;
+    border-radius: 1px;
+}
 .panel-default {
   -webkit-border-radius:7px;
   border-radius:7px;
@@ -190,7 +195,7 @@
   }
 
   &-archive-content {
-    height: 300px;
+    height: 680px;
   }
 
   & .shoutbox-button-settings {
